--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,9 +5,10 @@ on: pull_request
 jobs:
    testing_pr:
      runs-on: ubuntu-latest
-     environment: Test
+    # environment: Test
      steps:
-        - name: Test
-          run: echo ${{ secrets. Test}}
-        - name: Testing
-          run: echo "Testing ${{ secrets.Testing}}"
+       # - name: Test
+        #  run: echo ${{ secrets. Test}}
+       # - name: Testing
+        #  run: echo "Testing ${{ secrets.Testing}}"
+        - run: echo test
