--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,8 +7,8 @@ jobs:
      runs-on: ubuntu-latest
     # environment: Test
      steps:
-       # - name: Test
-        #  run: echo ${{ secrets. Test}}
-       # - name: Testing
-        #  run: echo "Testing ${{ secrets.Testing}}"
+        - name: Test
+          run: echo ${{ secrets. Test}}
+        - name: Testing
+          run: echo "Testing ${{ secrets.Testing}}"
         - run: echo test
