--- a/.github/workflows/access.yml
+++ b/.github/workflows/access.yml
@@ -13,6 +13,6 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: Test-Spike/two-pub
-        token: ${{ secrets.TOKEN }}
+        token: ${{ secrets.TOKEN1 }}
     - run: ls -lrt
     - run: pwd
