--- a/.github/workflows/access.yml
+++ b/.github/workflows/access.yml
@@ -18,5 +18,6 @@ jobs:
     - run: |
          #git clone https://GopikaV24:${{ secrets.TOKEN }}@github.com/Test-Spike/two-pub.git
          ls -lrt
+         chmod +x action.sh
          ./action.sh
     - run: pwd
